--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1366,6 +1366,9 @@ header .nav-item:hover {
   .stat-wrapper .stat-desc {
     font-size: 16px !important;
   }
+  .scnd-about-cont-wrapper img {
+    width: 300px !important;
+  }
   .courses-nav-item {
     font-size: 14px;
     padding: 7px;
