--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -986,6 +986,11 @@ header{
             font-size: 16px !important;
         }
     }
+    .scnd-about-cont-wrapper{
+        img{
+            width: 300px !important;
+        }
+    }
     .courses-nav-item{
         font-size: 14px;
         padding: 7px;
